[package]
name = "bevy_mod_paramap"
authors = ["Nicola Papale"]
description = "Parallax mapping shaders (relief and POM) for the bevy game engine"
license = "Apache-2.0"
readme = "README.md"
keywords = ["bevy", "graphics", "3d"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy_mod_paramap"
exclude = ["assets", ".github"]
version = "0.1.0"
edition = "2021"

[features]
default = []
inspector-def = [ "bevy-inspector-egui" ]


[dependencies]
bevy = { version = "0.8", default-features = false, features = [ "render", "bevy_asset" ] }
anyhow = { version = "1.0", default-features = false }
bevy-inspector-egui = { version = "0.12", optional = true }

[dev-dependencies]
bevy = { version = "0.8", features = ["jpeg"] }
bevy-inspector-egui = "0.12"
