[package]
name = "bevy_mod_paramap"
authors = ["Nicola Papale"]
description = "Parallax mapping shaders (relief and POM) for the bevy game engine"
license = "Apache-2.0"
readme = "README.md"
keywords = ["bevy", "graphics", "3d"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy_mod_paramap"
exclude = ["assets", ".github"]
version = "0.1.0"
edition = "2021"

[features]
default = []
inspector-def = [ "bevy-inspector-egui" ]


[dependencies]
bevy = { version = "0.8", default-features = false, features = [ "render", "bevy_asset" ] }
anyhow = { version = "1.0", default-features = false }
bevy-inspector-egui = { version = "0.12", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.59", default-features = false, features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]}
wasm-bindgen = { version = "0.2.82" }

[dev-dependencies]
bevy = { version = "0.8", default-features = false, features = [
  "jpeg", "render", "bevy_asset", "bevy_winit", "png"
] }
bevy-inspector-egui = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
bevy = { version = "0.8", default-features = false, features = [ "filesystem_watcher", "x11" ] }

[profile.wasm-release]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = "s"
